Add frontend application
This will allow us to render the frontend on the public website which
can be extended for new views later on.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     labels:
       - "logging=true"
 
+  frontend:
+    image: lblod/frontend-group-6-ai-help-me-ipdc
+    labels:
+      - "logging=true"
+
   # Your extra services here
 
   resource:
