Add hacked harvester

--- a/config/virtuoso/virtuoso.ini
+++ b/config/virtuoso/virtuoso.ini
@@ -90,8 +90,8 @@ AsyncQueueMaxThreads 	 	= 10
 ;; storage on all available disks.
 ;;
 ;; Uncomment next two lines if there is 2 GB system memory free
-NumberOfBuffers          = 170000
-MaxDirtyBuffers          = 130000
+;NumberOfBuffers          = 170000
+;MaxDirtyBuffers          = 130000
 ;; Uncomment next two lines if there is 4 GB system memory free
 ;NumberOfBuffers          = 340000
 ; MaxDirtyBuffers          = 250000
@@ -99,8 +99,8 @@ MaxDirtyBuffers          = 130000
 ;NumberOfBuffers          = 680000
 ;MaxDirtyBuffers          = 500000
 ;; Uncomment next two lines if there is 16 GB system memory free
-;NumberOfBuffers          = 1360000
-;MaxDirtyBuffers          = 1000000
+NumberOfBuffers          = 1360000
+MaxDirtyBuffers          = 1000000
 ;; Uncomment next two lines if there is 32 GB system memory free
 ;NumberOfBuffers          = 2720000
 ;MaxDirtyBuffers          = 2000000
