--- a/config/ldio/application.yml
+++ b/config/ldio/application.yml
@@ -51,7 +51,7 @@ orchestrator:
       outputs:
         - name: Ldio:VirtuosoOut
           config:
-            endpoint: https://localhost:8890/sparql
+            endpoint: http://localhost:8890/sparql
             graph: http://data.abb.be
 
 logging:
