--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,13 @@ services:
       # it shouldn't be a feature, and it works.  Check the referred
       # source file.
       - ./config/ldes-client-hack/cron-fetch-ldes.ts:/app/cron-fetch-ldes.ts
+    # We don't normally use profiles so this would be unexpected for a
+    # production setup.  The docker-compose.yml contains the production
+    # setup and other files contain other info.  It was used for the
+    # ldio workbench and it's good for documentation purposes of this
+    # setup.
+    profiles:
+      - data-ingest-ipdc-local-harvester
 
   # Framework support
 
