Add UUID generation service
We will need UUIDs if we want to render content in the frontend.  This
is going to be our fastest path to having those.  It runs as a CRON job
in this setting which isn't how it should be wired but it _will_ add
UUIDs for the missing entities at this point and that's good enough for
now.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,13 @@ services:
     profiles:
       - data-ingest-ipdc-local-harvester
 
+  uuid-generation:
+    image: redpencil/uuid-generation
+    volumes:
+      - ./config/uuid-generation/:/config
+    environment:
+      RUN_CRON_JOBS: "true" # our harvesting is without deltas right now
+
   # Framework support
 
   resource:
