Steps towards cleaner wiring for LDIO
This is an adaptation to the LDIO configuration which should make it
read without binding to host.  It seems LDIO isn't picking up the new
configuration though.

We could have this boot up always if we can store the sqlite database
too because that would only make it fetch the last page every so often.

--- a/config/ldio/application.yml
+++ b/config/ldio/application.yml
@@ -20,7 +20,7 @@ orchestrator:
         name: Ldio:LdesClient
         config:
           urls:
-            - http://localhost:5000/instantiesnapshot-limit-25-pageNumber-0.json
+            - http://nginx-snapshot-host/instantiesnapshot-limit-25-pageNumber-0.json
           sourceFormat: application/ld+json
           state: sqlite
       transformers:
@@ -51,7 +51,7 @@ orchestrator:
       outputs:
         - name: Ldio:VirtuosoOut
           config:
-            endpoint: http://localhost:8890/sparql
+            endpoint: http://triplestore:8890/sparql
             graph: http://data.abb.be
 
 logging:
