--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,8 +104,8 @@ services:
   ldio-workbench:
     image: ghcr.io/informatievlaanderen/ldi-orchestrator:20240930165201
     depends_on:
-      - database
-      - web
+      - triplestore
+      - nginx-snapshot-host
     environment:
       - SERVER_PORT=8080
     volumes:
@@ -113,10 +113,8 @@ services:
     network_mode: "host"
     profiles:
       - data-ingest
-  web:
+  nginx-snapshot-host:
     image: nginx:latest
-    ports:
-      - "5000:80"
     volumes:
       - ./data/instantiesnapshot-dumps-import:/usr/share/nginx/html:ro
     profiles:
